# mangaki

./: #Vagrantfile#  .circle_mangaki_settings.ini  .coveragerc  .editorconfig  .envrc  .eslintrc  .flake8  .gitattributes  .gitignore  .mailmap  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README-fr.md  README-nix.md  README.md  README.rst  Vagrantfile  ansible.cfg  circle.yml  config.sh  default.nix  flake.nix  mangaki.db  nodemon.json  package.json  pyproject.toml  requirements-algo.txt  requirements-dev.txt  requirements-linters.txt  requirements-testing.txt  requirements.txt  requirements.yaml  shell.nix
.circleci/: config.yml
.github/workflows/: flakes-test.yml
.reuse/: dep5
config/: _base.js
data/: anime.txt  animeka.py  bunch.py  events.txt  experiment_config.json  mal-api.py  mal-sheet.py  mal.py  search.py  source.txt  top.html
data/experiments/: default.json
docs/: strategie_de_deploiement.md
fixtures/: duplicates.json  editor-studio.yaml  ghibli.json  kizu.json  partners.json  seed_data.json  studio_ghibli_party.json
irl/migrations/: 0002_auto_20160110_2244.py  0006_events_on_work.py
mangaki/: .coveragerc  .gitignore  MANIFEST.in  README  add_anime.py  add_genre.py  add_manga.py  algo.py  manage.py  pytest.ini  secret_template.py  settings.py  settings.template.ini  setup.py  views.py
mangaki/discourse/: views.py
mangaki/experiments/: experiment.template.json
mangaki/frontend/: .editorconfig  package.json
mangaki/frontend/src/: index.html
mangaki/irl/: admin.py  apps.py  models.py
mangaki/irl/migrations/: 0001_initial.py  0001_squashed_0006_events_on_work.py  0003_auto_20160124_1537.py  0003_auto_20160124_1919.py  0004_event_attendees.py  0005_merge.py  0006_events_on_work.py  0007_auto_20180508_0950.py  0008_delete_location.py
mangaki/management/commands/: analytics.py  compare.py  findneighbors.py
mangaki/mangaki/: __init__.py  admin.py  api.py  apps.py  celery.py  choices.py  discourse.py  factories.py  fields.py  forms.py  mixins.py  models.py  receivers.py  router.py  serializers.py  settings.py  tasks.py  urls.py  views.py  workers.py  wsgi.py
mangaki/mangaki/algo/: __init__.py  als.py  als2.py  als3.py  balse.py  cfm.py  dataset.py  efa.py  efm.py  fit_algo.py  fma.py  gbr.py  knn.py  knn2.py  knn_sample.py  lasso.py  lasso_sample.py  nmf.py  pca.py  recommendation_algorithm.py  sgd.py  sgd_sample.py  side.py  ssvd.py  svd.py  wals.py  xals.py  zero.py
mangaki/mangaki/api/: __init__.py  animes.py  artists.py  cards.py  categories.py  editors.py  genres.py  mal.py  search.py  studios.py  tasks.py  urls.py  user.py  users.py  works.py
mangaki/mangaki/migrations/: 0001_initial.py  0001_squashed.py  0001_squashed_0026_auto_20160108_1137.py  0001_squashed_0033_stafftype.py  0001_squashed_0054_merge.py  0001_squashed_0055_merge.py  0001_squashed_0061_merge_20161112_1539.py  0002_auto_20150129_0110.py  0003_suggestion.py  0004_auto_20150224_1742.py  0005_auto_20150224_1746.py  0006_neighborship.py  0007_auto_20150306_1959.py  0009_auto_20150419_0758.py  0010_searchissue.py  0012_auto_20150616_0832.py  0013_auto_20150616_0919.py  0014_auto_20150624_0003.py  0015_auto_20150626_0839.py  0016_profile_score.py  0017_profile_newsletter_ok.py  0019_pairing.py  0020_pairing_is_checked.py  0022_reference.py  0023_auto_20151220_1706.py  0024_auto_20151220_1731.py  0025_auto_20151220_2132.py  0026_auto_20160108_1137.py  0027_tops.py  0028_auto_20160124_1919_squashed_0029_auto_20160124_1922.py  0029_category.py  (+134 more)
mangaki/migrations/: 0008_auto_20150323_1842.py  0011_auto_20150612_1259.py  0012_auto_20150616_0832.py  0013_auto_20150616_0919.py  0018_anime_anidb_aid.py  0019_pairing.py  0021_deck.py  0028_auto_20160124_1919_squashed_0029_auto_20160124_1922.py  0032_rating_date.py  0036_artist_name.py  0036_merge.py  0037_artistspelling.py  0040_auto_20160410_1946.py  0041_auto_20160410_1951.py  0043_auto_20160410_2002.py  0047_migrate_vgmdb_aid.py  0048_migrate_editor.py  0049_populate_work_editor.py  0051_migrate_studio.py  0052_populate_work_studio.py  0053_auto_20160416_0907.py  0055_merge.py  0057_auto_20160702_2048.py  0057_auto_20160716_1417.py
mangaki/notebooks/: Statistiques Mangaki codées en direct.ipynb
mangaki/profiles/: __init__.py  apps.py  factories.py  models.py  receivers.py  urls.py  views.py
mangaki/templates/: maintenance.html
mangaki/tests/: matplotlibrc  test_lookup_command.py  test_work.py
mangaki/tools/: add_anime.py  add_genre.py  add_manga.py
mangaki/utils/: db.py  dpplib.py  nmf.py  pca.py  vgmdb.py  zero.py
nix/: nixpkgs-overlays.nix  poetry-git-overlay.nix  poetry-standard-overlay.nix  standard-poetry-overlay.nix
nix/modules/: mangaki.nix
nix/vm/: mangaki-vm.nix  qemu-baseline.nix  standalone-configuration.nix
notebooks/: ALS Tensorflow.ipynb  API AniDB.ipynb  AniDB.ipynb  Benchmarks for cold-start.ipynb  Create references.ipynb  DPP : classes pour l'intégration au site (essai).ipynb  Diamètre d'ordre 0.ipynb  Essai, test.ipynb  Factor analysis.ipynb  I - Statistiques Mangaki codées en direct.ipynb  II - Recommandations.ipynb  III - Test adaptatif.ipynb  III - Visualizations.ipynb  Local posters.ipynb  MCTS.ipynb  Make anonymous data.ipynb  Make seed data.ipynb  Similar Items.ipynb  Statistiques Mangaki codées en direct.ipynb  Studio Ghibli Party.ipynb  Subset of popular works.ipynb  Test classe-Copy1.ipynb  Test classe.ipynb  Test dpp.py.ipynb  Untitled.ipynb  Visualizations.ipynb  elarnon.ipynb  notebook stage.ipynb  pca.ipynb  ratings_mini.csv  test de similarity_matrix qui sera ds dpp.py.ipynb  works.csv
provisioning/: .gitignore  README.md  bootstrap.sh  playbook.yml  site.yml
provisioning/docker/: Dockerfile
provisioning/group_vars/: all  mangaki_dev  mangaki_standalone
provisioning/roles/: README.md
provisioning/scripts/: deploy_beta.sh
provisioning/templates/: secret.j2  settings.prod.j2
provisioning/vagrant/: key_authorization.rb
provisioning/vars/: common.yaml  db.yaml  mangaki.yml  python.yaml
requirements/: dev.txt  production.txt
(+429 files in other folders)
