[tool.poetry]
name = "mangaki"
version = "0.6.1"
description = "Open source website for anime and manga recommendations"
authors = ["Basile Clément <Elarnon@users.noreply.github.com>, Ryan Lahfa <masterancpp@gmail.com>, Jill-Jênn Vie <vie@jill-jenn.net>"]
license = "GPL-3.0"
homepage = "https://mangaki.fr"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
django-allauth = "^0.41"
django-bootstrap4 = "*"
django-celery-beat="^1.1"
django-js-reverse="^0.9"
django-sendfile="^0.3"
djangorestframework="^3.9"
psycopg2-binary="*"
responses="^0.10"
markdown="^3.0"
jinja2="*"
lxml="^4.4"
beautifulsoup4="*"
coreapi="^2.3"
celery="^4.2"
redis="^2.10"
python-redis-lock="^3.2"
raven="^6.1"
setuptools-scm="^3.4"
mangaki-zero = {git="https://github.com/mangaki/zero", branch="master"}
natsort = "^7.0.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar="^2.2"
django-extensions="*"
django-nose="*"
flake8="*"
git-lint="*"
pylint="*"
pycodestyle="*"
yamllint="*"
html-linter="*"
factory_boy="*"
coverage = {extras = ["toml"], version = "^5.1"}
django-coverage-plugin="*"
pytest = "^5.4.1"
hypothesis="^3.56"
pytest-runner = "^5.2"
pytest-django = "^3.9.0"
pytest-xdist = "^1.31.0"
pytest-cov = "^2.8.1"

[tool.coverage.run]
source = ["mangaki", "irl"]
omit = ["*/tests/*.py", "*/migrations/*.py", "wsgi.py", "manage.py", "setup.py"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
exclude_lines =  ["pragma: no cover", 
 "def __repr__",
 "def __str__"]

show_missing = true
skip_covered = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
