[tool.poetry]
name = "mangaki"
version = "0.6.1"
description = "Open source website for anime and manga recommendations"
# Order matters (for maintainer & authoring).
authors = ["Mangaki team <contact@mangaki.fr>", "Ryan Lahfa <masterancpp@gmail.com>", "Basile Clément <Elarnon@users.noreply.github.com>", "Jill-Jênn Vie <vie@jill-jenn.net>"]
license = "GPL-3.0"
homepage = "https://mangaki.fr"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2" # main
django-allauth = "^0.41" # main
django-bootstrap4 = "!=1.1.1" # main
django-celery-beat="^1.1" # main
django-js-reverse="^0.9" # main
django-sendfile="^0.3" # main
djangorestframework="^3.9" # main
psycopg2-binary = "2.8.6" # main
markdown="^3.0" # main
jinja2="*" # main
lxml="^4.4" # main
beautifulsoup4="*" # main
coreapi="^2.3"# main
celery="^4.2" # main
redis="^3.2" # main
python-redis-lock="^3.2" # main
raven="^6.1" # main
setuptools-scm="^3.4" # main
mangaki-zero = {git="https://github.com/mangaki/zero", branch="master"} # main
natsort = "^7.0.1" # main

[tool.poetry.dev-dependencies]
django-debug-toolbar="^2.2" # dev
django-extensions="*" # dev
django-nose="*" # legacy-tests
flake8="*" # dev
git-lint="*" # dev
pylint="*" # dev
pycodestyle="*" # dev
yamllint="*" # dev
html-linter="*" # dev
factory_boy="*" # tests
coverage = {extras = ["toml"], version = "^5.1"} # tests
django-coverage-plugin="*" # tests
responses="^0.10" # tests
pytest = "^5.4.1" # tests
hypothesis="^3.56" # tests
pytest-runner = "^5.2" # tests
pytest-django = "^3.9.0" # tests
pytest-xdist = "^1.31.0" # tests
pytest-cov = "^2.8.1" # tests
dephell = "^0.8.3" # dev
dunamai = "^1.1.0"

[tool.coverage.run]
source = ["mangaki", "irl"]
omit = ["*/tests/*.py", "*/migrations/*.py", "*/wsgi.py", "*/manage.py", "*/setup.py"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
exclude_lines =  ["pragma: no cover", 
 "def __repr__",
 "def __str__"]

show_missing = true
skip_covered = true

[tool.setuptools_scm]
write_to = "mangaki/version.py"

[tool.dephell.main]
from = {format="poetry", path="pyproject.toml"}
envs = ["main"]
to = {format="setuppy", path="mangaki/setup.py"}

[tool.dephell.pytest]
from = {format="poetry", path="pyproject.toml"}
envs = ["main", "tests"]
command = "pytest mangaki/"

[tool.dephell.production]
from = {format="poetry", path="pyproject.toml"}
envs = ["main"]
to = {format="pip", path="requirements/production.txt"}

[tool.dephell.dev]
from = {format="poetry", path="pyproject.toml"}
envs = ["main", "tests", "dev"]
to = {format="pip", path="requirements/dev.txt"}

[build-system]
requires = ["poetry>=0.12", "setuptools_scm[toml]>=3.4"]
build-backend = "poetry.masonry.api"
