[tool.poetry]
name = "mangaki"
version = "0.8.0"
description = "Open source website for anime and manga recommendations"
# Order matters (for maintainer & authoring).
authors = ["Mangaki team <contact@mangaki.fr>", "Ryan Lahfa <masterancpp@gmail.com>", "Basile Clément <Elarnon@users.noreply.github.com>", "Jill-Jênn Vie <vie@jill-jenn.net>"]
license = "GPL-3.0"
homepage = "https://mangaki.fr"
readme = "README.md"

packages = [
  { include = "mangaki", from = "mangaki" },
  { include = "irl", from = "mangaki" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = "^3.2" # main
django-allauth = "^0.41" # main
django-bootstrap4 = "!=1.1.1" # main
django-celery-beat="^2.3" # main
django-js-reverse="^0.9" # main
django-sendfile="^0.3" # main
djangorestframework="^3.9" # main
markdown="^3.0" # main
jinja2="*" # main
lxml="^4.9" # main
beautifulsoup4="*" # main
coreapi="^2.3"# main
celery="^5.2" # main
redis="^3.2" # main
python-redis-lock="^3.2" # main
raven="^6.1" # main
mangaki-zero = { git = "https://github.com/mangaki/zero", branch = "master" } # main
natsort = "^7.0.1" # main
psycopg2 = "^2.8.6,<2.9"
dj-database-url = "0.5.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar="^2.2" # dev
django-extensions="*" # dev
flake8="*" # dev
git-lint="*" # dev
pylint="*" # dev
pycodestyle="*" # dev
yamllint="*" # dev
html-linter="*" # dev
factory_boy="*" # tests
coverage = {extras = ["toml"], version = "^5.1"} # tests
django-coverage-plugin="*" # tests
responses="^0.10" # tests
pytest = "^6.2.5" # tests
hypothesis="^4.0" # tests
pytest-runner = "^6.0" # tests
pytest-django = "^4.5.2" # tests
pytest-xdist = "^2.5.0" # tests
pytest-cov = "^3.0.0" # tests

[tool.coverage.run]
source = ["mangaki", "irl"]
omit = ["*/tests/*.py", "*/migrations/*.py", "*/wsgi.py", "*/manage.py", "*/setup.py"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
exclude_lines =  ["pragma: no cover", 
 "def __repr__",
 "def __str__"]

show_missing = true
skip_covered = true

[tool.dephell.main]
from = {format="poetry", path="pyproject.toml"}
envs = ["main"]
to = {format="setuppy", path="mangaki/setup.py"}

[tool.dephell.pytest]
from = {format="poetry", path="pyproject.toml"}
envs = ["main", "tests"]
command = "pytest mangaki/"

[tool.dephell.production]
from = {format="poetry", path="pyproject.toml"}
envs = ["main"]
to = {format="pip", path="requirements/production.txt"}

[tool.dephell.dev]
from = {format="poetry", path="pyproject.toml"}
envs = ["main", "tests", "dev"]
to = {format="pip", path="requirements/dev.txt"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
